==> esp8266/Arduino/libraries/Robot_Control/Arduino_LCD.cpp <==
#include "Arduino_LCD.h"
#include <limits.h>
#include "wiring_private.h"
#include <SPI.h>

inline void Arduino_LCD::spiwrite(uint8_t c) {

  //Serial.println(c, HEX);

/*  if (hwSPI) {
    SPDR = c;
    while(!(SPSR & _BV(SPIF)));
  } else {
    // Fast SPI bitbang swiped from LPD8806 library
    for(uint8_t bit = 0x80; bit; bit >>= 1) {
      if(c & bit) *dataport |=  datapinmask;
      else        *dataport &= ~datapinmask;
      *clkport |=  clkpinmask;
      *clkport &= ~clkpinmask;
    }
  }
*/
SPI.transfer(c);
}

void Arduino_LCD::writecommand(uint8_t c) {
//  *rsport &= ~rspinmask;
//  *csport &= ~cspinmask;
digitalWrite(_rs, LOW);
digitalWrite(_cs, LOW);

  //Serial.print("C ");
  spiwrite(c);
//SPI.transfer(c);
//  *csport |= cspinmask;
digitalWrite(_cs, HIGH);
}

void Arduino_LCD::writedata(uint8_t c) {
//  *rsport &= ~rspinmask;
//  *csport &= ~cspinmask;
digitalWrite(_rs, HIGH);
digitalWrite(_cs, LOW);

  //Serial.print("D ");
  spiwrite(c);
//SPI.transfer(c);
//  *csport |= cspinmask;
digitalWrite(_cs, HIGH);
}

void Arduino_LCD::setAddrWindow(uint8_t x0, uint8_t y0, uint8_t x1,
 uint8_t y1) {

  writecommand(ILI9163C_CASET); // Column addr set
  writedata(0x00);
  writedata(x0+colstart);     // XSTART 
  writedata(0x00);
  writedata(x1+colstart);     // XEND

  writecommand(ILI9163C_RASET); // Row addr set
  writedata(0x00);
  writedata(y0+rowstart);     // YSTART
  writedata(0x00);
  writedata(y1+rowstart);     // YEND

  writecommand(ILI9163C_RAMWR); // write to RAM
}

void Arduino_LCD::invertDisplay(boolean i) {
  writecommand(i ? ILI9163C_INVON : ILI9163C_INVOFF);
}
