==> rbotarleanu/Space-Invaders-with-an-ATMega-Microcontroller/lcd.c <==
#include "lcd.h"
#define __PROG_TYPES_COMPAT__
#define F_CPU 16000000L
#include "gfx.h"
#include <avr/pgmspace.h>
#include <avr/io.h>
#include <util/delay.h>
#include <avr/interrupt.h>
#include <limits.h>

inline void spiwrite(uint8_t c) {
    SPDR = c;
	
	while (!(SPSR & (1 << SPIF)));
	
	}

void writecommand(uint8_t c) {
    PORTC &= ~(1 << RS);
    spiwrite(c);
}

void writedata(uint8_t c) {
    PORTC |= (1 << RS);
    spiwrite(c);
}

void setAddrWindow(uint8_t x0, uint8_t y0, uint8_t x1, uint8_t y1) {
    writecommand(ST7735_CASET); // Column addr set
    writedata(0x00);
    writedata(x0+colstart);     // XSTART
    writedata(0x00);
    writedata(x1+colstart);     // XEND

    writecommand(ST7735_RASET); // Row addr set
    writedata(0x00);
    writedata(y0+rowstart);     // YSTART
    writedata(0x00);
    writedata(y1+rowstart);     // YEND

    writecommand(ST7735_RAMWR); // write to RAM
}

void invertDisplay(unsigned char i) {
    writecommand(i ? ST7735_INVON : ST7735_INVOFF);
}
